--- a/scss/wemucs/_global.scss
+++ b/scss/wemucs/_global.scss
@@ -1,3 +1,31 @@
-body {
-   margin: 0.5em;
- }
+.articles-list {
+  article {
+    background-color: $wemucs-content-background-color;
+    margin-top: 1em;
+    margin-bottom: 1em;
+
+    padding: 0.75em;
+
+    color: $wemucs-text-color;
+    -webkit-font-smoothing: antialiased;
+
+    h1 {
+      font-size: 1.5em;
+    }
+
+    p {
+      margin-bottom: 0;
+      line-height: 1.2;
+    }
+
+    .article-img {
+      width: 75px;
+      height: 75px;
+    }
+
+    .article-img-part:after {
+      @include clearfix();
+    }
+  }
+}
+
