--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -12,6 +12,10 @@ $wemucs-subtitle-color: #969696;
 $wemucs-light-color: #CCCCCC;
 
 
+$font-family-sans-serif: 'Istok Web', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+$font-family-serif: Georgia, Cambria, "Times New Roman", Times, serif;
+$font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
+
 // Foundation related settings
 $body-bg: $wemucs-background-color;
 $body-font-color: $wemucs-text-color;
