Improved article view

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -42,3 +42,5 @@ $topbar-menu-icon-color: $topbar-link-color;
 $topbar-dropdown-bg: $topbar-bg-color;
 $topbar-dropdown-link-color: $topbar-link-color;
 $topbar-dropdown-link-bg: $topbar-bg-color;
+
+$paragraph-margin-bottom: 0.7rem;
