Added article image

--- a/scss/wemucs/_article.scss
+++ b/scss/wemucs/_article.scss
@@ -15,6 +15,10 @@
     margin-top: -0.5rem;
   }
 
+  .article-img {
+    margin-bottom: 1em;
+  }
+
   .article-credentials {
     color: $wemucs-text-color;
 
