--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -16,6 +16,8 @@ $font-family-sans-serif: 'Lato', "Helvetica Neue", Helvetica, Roboto, Arial, san
 $font-family-serif: Georgia, Cambria, "Times New Roman", Times, serif;
 $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
 
+$row-width: 980px;
+
 // Foundation related settings
 $body-bg: $wemucs-background-color;
 $body-font-color: $wemucs-text-color;
