--- a/scss/wemucs/_lists.scss
+++ b/scss/wemucs/_lists.scss
@@ -9,19 +9,26 @@
     color: $wemucs-text-color;
 
     h1 {
-      font-size: 1.5em;
+      a {
+        color: $header-font-color;
+      }
     }
 
     p {
       font-weight: 300;
       margin-bottom: 0.5rem;
       line-height: 1.2;
+
+      a {
+        color: $body-font-color;
+      }
     }
 
     img {
       width: 75px;
       height: 75px;
       margin: 2px;
+      text-align: center;
     }
 
     .article-credentials {
@@ -32,4 +39,12 @@
   }
 }
 
+.related-articles {
+  h1 {
+    font-size: 2em;
+  }
 
+  h2 {
+    font-size: 1.5em;
+  }
+}
