--- a/scss/extra/_settings.scss
+++ b/scss/extra/_settings.scss
@@ -50,6 +50,8 @@ $body-font-color: $wemucs-text-color;
 $header-font-color: $wemucs-title-color;
 $small-font-color: $wemucs-subtitle-color;
 
+$footer-height: 65px;
+
 // Modules
 // -------------------------
 
