--- a/scss/extra/modules/_article.scss
+++ b/scss/extra/modules/_article.scss
@@ -2,17 +2,17 @@
 // - Article module
 // ------------------------------
 
-.article-entry {
+.article {
+  background-color: $color-white;
   border: 1px solid #e9e9e9;
   margin: 5px 0;
-  padding: 15px;
 
-  + .article-entry {
+  + .article {
     margin-top: 15px;
   }
 }
 
-.article-entry {
+.article {
   .article-title {
     font-size: 1.5rem;
   }
@@ -27,6 +27,10 @@
     }
   }
 
+  .article-body {
+    padding: 15px;
+  }
+
   .article-content {
     font-size: 1rem;
   }
@@ -36,7 +40,7 @@
 // - Responsive content
 // ------------------------------
 @media #{$medium-up} {
-  .article-entry {
+  .article {
     min-height: 340px;
 
     .article-title {
