--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -19,8 +19,14 @@ $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
 $row-width: 980px;
 
 // Foundation related settings
+$primary-color: $wemucs-title-color;
+
 $body-bg: $wemucs-background-color;
 $body-font-color: $wemucs-text-color;
+
+$topbar-bg-color: $wemucs-content-background-color;
+$topbar-link-bg-hover: $wemucs-content-background-color;
+$topbar-link-color-hover: $primary-color;
 
 $header-font-color: $wemucs-title-color;
 $small-font-color: $wemucs-subtitle-color;
