--- a/scss/wemucs/_article.scss
+++ b/scss/wemucs/_article.scss
@@ -20,13 +20,45 @@
   }
 
   .article-credentials {
+    @include grid-row();
+
     color: $wemucs-text-color;
+    margin: 20px 0;
 
-    margin-top: 3em;
+    .article-credentials-avatar {
+      float: left;
+      height: 60px;
+      width: 60px;
 
-    font-size: 1em;
-    text-align: center;
+      margin: 0 10px;
+
+      .avatar {
+        border-radius: 50%;
+        -moz-border-radius: 50%;
+        -webkit-border-radius: 50%;
+      }
+    }
+
+    .article-credentials-infos {
+      float: left;
+      width: 70%;
+
+      padding: 10px 0;
+    }
+
+    .article-credentials-bio {
+      font-weight: 300;
+    }
   }
+
+//  .article-credentials {
+//    color: $wemucs-text-color;
+//
+//    margin-top: 3em;
+//
+//    font-size: 1em;
+//    text-align: center;
+//  }
 
   .article-topic {
     color: $wemucs-subtitle-color;
