Minor improvements (font size + background color)

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -4,7 +4,7 @@
 
 // Global settings
 // Based on: https://color.adobe.com/fr/Wemucs-colors-based-on-Maravon-rot-grau-schwarz-color-theme-4829392/
-$wemucs-background-color: #fafafa;
+$wemucs-background-color: #f0f0f0;
 $wemucs-content-background-color: #ffffff;
 $wemucs-title-color: #AD1730;
 $wemucs-text-color: #000000;
