--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -11,6 +11,7 @@ $wemucs-text-color: #000000;
 $wemucs-subtitle-color: #969696;
 $wemucs-light-color: #CCCCCC;
 
+$link-color : mediumblue;
 
 $font-family-sans-serif: 'Lato', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 $font-family-serif: Georgia, Cambria, "Times New Roman", Times, serif;
