--- a/scss/wemucs/_lists.scss
+++ b/scss/wemucs/_lists.scss
@@ -26,7 +26,8 @@
 
     p {
       font-weight: 300;
-      margin-bottom: 0.5rem;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
       line-height: 1.2;
 
       a {
@@ -42,10 +43,31 @@
   }
 }
 
+.box {
+  background-color: $wemucs-content-background-color;
+
+  padding: 0.75em;
+
+  margin-top: 1em;
+  margin-bottom: 1em;
+
+  h1 {
+    font-size: 1.4em;
+  }
+
+  ul {
+    list-style: none;
+
+    li a {
+      color: $link-color;
+    }
+  }
+}
+
 @media #{$medium-up} {
   .articles-list {
     p {
-      font-size: 1.1em;
+      font-size: 1.2em;
     }
   }
 }
