Added "Who we are" box and improved text in boxes

--- a/scss/wemucs/_lists.scss
+++ b/scss/wemucs/_lists.scss
@@ -51,16 +51,29 @@
   margin-top: 1em;
   margin-bottom: 1em;
 
+  a {
+    color: $link-color;
+  }
+
   h1 {
     font-size: 1.4em;
   }
 
   ul {
     list-style: none;
+    font-weight: 300;
+  }
 
-    li a {
-      color: $link-color;
-    }
+  .whoweare-image {
+
+    text-align: center;
+  }
+
+  .whoweare-text {
+    margin: 10px 0;
+
+    font-weight: 300;
+    line-height: 1.2;
   }
 }
 
